2013-10-03  Joseph Myers  <joseph@codesourcery.com>

	* locale/localeinfo.h (LOCFILE_ALIGN): New macro.
	(LOCFILE_ALIGN_MASK): Likewise.
	(LOCFILE_ALIGN_UP): Likewise.
	(LOCFILE_ALIGNED_P): Likewise.
	* locale/programs/ld-collate.c (collate_output): Use the new
	macros instead of __alignof__ (int32_t).
	* locale/weight.h (findidx): Likewise.

2013-10-03  Ondřej Bílka  <neleai@seznam.cz>

	[BZ #431]
	* manual/string.texi: Fix strncat and wcsncat.

2013-10-03  Brooks Moses  <bmoses@google.com>

	[BZ #15915]
	* Makefile (linkobj/libc_pic.a, linkobj/libc.so): Move rules to...
	* Makerules: ...here, and adjust associated comments.

2013-10-02  Will Newton  <will.newton@linaro.org>

	* malloc/Makefile: Add tst-pvalloc.
	* malloc/tst-pvalloc.c: New file.

2013-10-02  Will Newton  <will.newton@linaro.org>

	* malloc/tst-valloc.c: Rewrite to use test-skeleton.c and
	improve test coverage.

2013-10-02  Will Newton  <will.newton@linaro.org>

	* malloc/Makefile: Add tst-posix_memalign.
	* malloc/tst-posix_memalign.c: New file.

2013-10-01  Eric Blake  <eblake@redhat.com>

	* posix/glob.c (next_brace_sub, prefix_array, collated_compare):
	Use __THROWNL rather than __THROW on static functions.

2013-09-30  Petr Machata  <pmachata@redhat.com>

	* elf/elf.h (R_AARCH64_ABS16): New macro.
	(R_AARCH64_PREL64, R_AARCH64_PREL32): Likewise.
	(R_AARCH64_PREL16, R_AARCH64_MOVW_UABS_G0): Likewise.
	(R_AARCH64_MOVW_UABS_G0_NC, R_AARCH64_MOVW_UABS_G1): Likewise.
	(R_AARCH64_MOVW_UABS_G1_NC, R_AARCH64_MOVW_UABS_G2): Likewise.
	(R_AARCH64_MOVW_UABS_G2_NC, R_AARCH64_MOVW_UABS_G3): Likewise.
	(R_AARCH64_MOVW_SABS_G0, R_AARCH64_MOVW_SABS_G1): Likewise.
	(R_AARCH64_MOVW_SABS_G2, R_AARCH64_LD_PREL_LO19): Likewise.
	(R_AARCH64_ADR_PREL_LO21, R_AARCH64_ADR_PREL_PG_HI21): Likewise.
	(R_AARCH64_ADR_PREL_PG_HI21_NC, R_AARCH64_ADD_ABS_LO12_NC): Likewise.
	(R_AARCH64_LDST8_ABS_LO12_NC, R_AARCH64_LDST16_ABS_LO12_NC): Likewise.
	(R_AARCH64_LDST32_ABS_LO12_NC, R_AARCH64_LDST64_ABS_LO12_NC): Likewise.